--- a/app/Resources/views/pages/home.html.twig
+++ b/app/Resources/views/pages/home.html.twig
@@ -3,7 +3,7 @@
 {% block title %} Accueil de {{ name }} {% endblock %}
 
 {% block body %}
-<h1>Bonjour et bienvenue, {{ name }}</h1>
+<h1>Bonjour, {{ name }}</h1>
 <ul>
     {% for note in notes %}
         <li>{{ note }}</li>
