--- a/src/Louvre/BilletBundle/Resources/views/Billet/index.html.twig
+++ b/src/Louvre/BilletBundle/Resources/views/Billet/index.html.twig
@@ -1,4 +1,10 @@
 {% extends 'LouvreBilletBundle:Billet:layout.html.twig' %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css">
+{% endblock %}
+
 {% block body %}
     <div class="row">
         <div class="col-md-12 center-block">
@@ -10,7 +16,7 @@
                 {{ include('@LouvreBillet/Billet/form.html.twig') }}
         </div>
         <div id="content" class="col-md-3">
-            <h3>Tarifs indicatifs</h3>
+            <h3 class="text-center">Tarifs indicatifs</h3>
             <ul class="nav nav-pills nav-stacked well well-lg">
                 <li>Moins de 4 ans : 0€</li>
                 <li>De 4 à 12 ans : 8€</li>
@@ -18,6 +24,39 @@
                 <li>60 ans et plus : 12€</li>
                 <li>Tarif réduit : 10€</li>
             </ul>
+
+            <h3 class="text-center">Informations complémentaires</h3>
+            <ul class="nav nav-pills nav-stacked well well-lg">
+                <li>Le musée étant fermé les mardis, dimanches et jours fériés, vous ne pouvez pas effectuer de réservation pour ces jours-là.</li>
+                <br>
+                <li>Il n'est pas possible de réserver des billets "Journée" pour la journée en cours après 14h.</li>
+                <br>
+                <li>Avec le billet "Demi-Journée", vous ne pouvez rentrer qu'à partir de 14h.</li>
+                <br>
+                <li>Il sera nécessaire de présenter sa carte d’étudiant, militaire ou équivalent lors de l’entrée pour prouver que vous bénéficiez bien du tarif réduit</li>
+            </ul>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/locales/bootstrap-datepicker.fr.min.js"></script>
+    <script>
+        jQuery(document).ready(function() {
+            $('.js-datepicker').datepicker({
+                orientation: 'bottom',
+                autoclose: true,
+                language: 'fr',
+                format: 'd MM yyyy',
+                startDate: 'today',
+                todayHighlight: true,
+                daysOfWeekDisabled: [0,2],
+                datesDisabled: ['01/11/2017', '11/11/2017', '25/12/2017', '01/01/2018', '02/04/2018', '01/05/2018', '10/05/2018', '21/05/2018', '14/07/2018', '15/08/2018', '01/11/2018'],
+                endDate: '31/12/2018',
+                weekStart: 1,
+            });
+        });
+    </script>
 {% endblock %}
