--- a/src/Louvre/BilletBundle/Resources/views/Billet/layout.html.twig
+++ b/src/Louvre/BilletBundle/Resources/views/Billet/layout.html.twig
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ asset('img/favicon.ico') }}" />
 
     <title>{% block title %}Musée du Louvre - Billetterie{% endblock %}</title>
 
